ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  OpenHttpPort:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  NoDescription:
    Type: AWS::EC2::SecurityGroup
    Properties:
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  UnrestrictedUnknown:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 22127
          ToPort: 22162
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  SshRule:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 22
          ToPort: 22
          CidrIp: 192.16.0.0/16
        SecurityGroupEgress:
        - IpProtocol: tcp
          Description: Allow http to client host
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
